# librpg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  frag.glsl  temp.frag  temp.glsl  tilemap.frag  tilemap.vert
.kdev4/: rpg.kdev4
include/RPG/: rpg.h  rpgaudio.h  rpgcolors.h  rpgext.h
lib/: CMakeLists.txt  main.c
src/: CMakeLists.txt  assets.c  audio.c  audiofx.c  basic.c  batch.c  font.c  game.c  game.h  glad.c  image.c  input.c  internal.h  plane.c  renderable.c  renderable.h  rpg.c  shader.c  shaders.c  sprite.c  stb_image.h  stb_image_write.h  stb_truetype.h  tilemap.c  transition.c  viewport.c
src/audio/: audio.c  audio.r  channel.c  sound.c
src/graphics/: glad.h  graphics.c  graphics.r
src/include/: audio.h  graphics.h  internal.h  platform.h
src/tmx/: tmx_utils.c
